- Added shell-script dvd-chapter-mkv.sh 
- Integrate installation / upgrade of makemkv 1.6.6 into setup.sh (only 64)
- Locking sections implemented. 
- Added Section inside README about the long operation for dvd-chapter-mkv.sh 
- Integrate installation / upgrade of makemkv 1.6.7 into setup.sh (only 32) 
- Integrate installation / upgrade of makemkv 1.6.7 into setup.sh (only 64)
- Added new parameter-id 32087 into settings of the addon.   

  Warning : Parameter t1 was increased because the new parameter-id 32087 !!      


Fixes:

- verbose-mode logging had a failure inside osrun
- Inside bluray-transcode.sh and dvd-mkv.sh was a failure that occur after a succesfull operation
  the destination file was not renamed properly.
- If we do rename we should also include a extension (fix for above fix)
- With a heavy load the predefined delay value for the ssh-testcommand is may 
  to small.(Incremented the value by 1).
- Do not remove openssh-server and openssh-client during the execution of deinstall.sh 
- Fix issue 19 
- README.linux replaced with README.en.linux
- Possible fix that prevent occur of issue 17 ...
- Fixed typo german language <string id="33300">
- 2 functions inside the addon are not unicode-safe.
- Finaly fixed issue 19 (confirmed)
- Fixed ugly bug inside dvd-chapter.sh 
  (there was no device for dvd on some calls to lsdvd)
  Thanks to fabrice.peiffer@convar.com
- Fixed issue 22 with loging non asci-code inside log.
- In the case the progress-bar is open and displayed, there is no 
  need to show the same information inside the info-area.


----------------------------------------------------------------------------------------------------
Date : 11.04.2011 | Release : 0.6.20    | Author  : H.Weber | CVS:497
----------------------------------------------------------------------------------------------------

Changes:

- Initial-Work for release named "Jurassic Park"
- Directorys to be created are shown inside setup.sh


  

 
 


 






